--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,9 +67,7 @@
                 </div>
 
                 <a href="{{ path('faq_index') }}">
-                    <div id="faq-button">
-                        <p>FAQ</p>
-                    </div>
+                        <img src="{{ asset('images/faq.png') }}" alt="FAQ" id="faq-button" />
                 </a>
 
             </div>
