--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,16 +20,16 @@
        </div>
 
         <div class="row justify-content-center steps">
-            <div class="col-3 m-3 p-2 border border-dark text-center">
+            <div class="col-3 m-3 p-2 border border-dark text-center bg-white">
                 <img src="{{ asset('images/step-estime.png') }}" alt="Estime ton tél" class="img-fluid img-steps">
                 <a href="{{ path('estimations_new') }}" class="primary-button">Estime ton tél</a>
             </div>
-            <div class="col-3 m-3 p-2 border border-dark text-center">
+            <div class="col-3 m-3 p-2 border border-dark text-center bg-white">
                 <img src="{{ asset('images/step-vends.png') }}" alt="Vends ton tél" class="img-fluid img-steps">
                 <a href="{{ path('estimations_new') }}" class="primary-button">Vends ton tél</a>
             </div>
 
-            <div class="col-3 m-3 p-2 border border-dark text-center">
+            <div class="col-3 m-3 p-2 border border-dark text-center bg-white">
                 <img src="{{ asset('images/step-achete.png') }}" alt="Achète un tél" class="img-fluid img-steps">
                 <a href="{{ path('boutique') }}" class="primary-button">Achète un tél</a>
             </div>
@@ -43,8 +43,8 @@
                 <p>BipBip est une marque qui organise des colllectes de téléphones dans la région des Hauts de France.
                     Nous avons pour but la dépollution et le recyclage des mobiles dans notre région en te faisant gagner de l'argent.
                 </p>
-                <div class="text-center">
-                    <div class="primary-button ">En savoir plus ?</div>
+                <div class="m-auto bubble-text">
+                    <p>En savoir plus ?</p>
                 </div>
             </div>
         </div>
@@ -57,8 +57,8 @@
                     tous les téléphones usagés ou unitilisés à l'aide des associations étudiantes qui nous accueillent et nous
                     accompagnent en ouvrant des points de collecte. C'est l'occaion pour nos partenaires de collecte
                     et partenaires locaux de se faire connapitre davantage dans notre région.</p>
-                <div class="text-center">
-                    <div class="primary-button ">En savoir plus ?</div>
+                <div class="m-auto bubble-text">
+                    <p>En savoir plus ?</p>
                 </div>
             </div>
         </div>
