first links for new burger menu

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -5,6 +5,7 @@ $fourth-color : #007F68;
 
 $primary-font: 'Avenir Next';
 $secondary-font : 'Century Gothic';
+$third-font : 'Lobster Hand';
 $custom-file-text: (
     fr: "Parcourir",
 );
