--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,18 +20,18 @@
        </div>
 
         <div class="row justify-content-center steps">
-            <div class="col-3 m-3 p-2 border border-dark text-center bg-white">
+            <div class="col-3 m-2 m-sm-3 p-1 p-sm-2 border border-dark text-center bg-white">
                 <img src="{{ asset('images/step-estime.png') }}" alt="Estime ton tél" class="img-fluid img-steps">
-                <a href="{{ path('estimations_new') }}" class="primary-button">Estime ton tél</a>
+                <a href="{{ path('estimations_new') }}" class="small-button">Estime ton tél</a>
             </div>
-            <div class="col-3 m-3 p-2 border border-dark text-center bg-white">
+            <div class="col-3 m-2 m-sm-3 p-1 p-sm-2 border border-dark text-center bg-white">
                 <img src="{{ asset('images/step-vends.png') }}" alt="Vends ton tél" class="img-fluid img-steps">
-                <a href="{{ path('estimations_new') }}" class="primary-button">Vends ton tél</a>
+                <a href="{{ path('estimations_new') }}" class="small-button">Vends ton tél</a>
             </div>
 
-            <div class="col-3 m-3 p-2 border border-dark text-center bg-white">
+            <div class="col-3 m-2 m-sm-3 p-1 p-sm-2 border border-dark text-center bg-white">
                 <img src="{{ asset('images/step-achete.png') }}" alt="Achète un tél" class="img-fluid img-steps">
-                <a href="{{ path('boutique') }}" class="primary-button">Achète un tél</a>
+                <a href="{{ path('boutique') }}" class="small-button">Achète un tél</a>
             </div>
         </div>
 
