--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -5,6 +5,11 @@
     font-family: Avenir Next;
     src: url('AvenirNextLTPro-Regular.otf') format('opentype');
 }
+@font-face
+{
+    font-family: Lobster Hand;
+    src: url('LobsterHand.otf') format('opentype');
+}
 
 /* Boutons */
 
@@ -38,6 +43,30 @@
     }
     @media screen and (min-width: 768px) {
         font-size: 1rem;
+    }
+}
+
+.small-button {
+    display: inline-block;
+    font-family: $secondary-font, sans-serif;
+    background-color : $primary-color;
+    font-weight: bold;
+    text-align : center;
+    color : white;
+    font-size : 0.8rem;
+    width: 80%;
+    max-height: 3rem;
+    border-radius: 25px;
+    margin : 0;
+    padding : 10px;
+
+    @media screen and (min-width: 768px) {
+        font-size: 1.2rem;
+    }
+
+    &:hover {
+        color: white;
+        text-decoration: none;
     }
 }
 
@@ -131,7 +160,7 @@ header{
 
     #menu{
         display : none;
-        z-index : 9999;
+        z-index : 9998;
         background : #FFFFFF;
         padding : 1em 2em;
         width : 100%;
@@ -142,30 +171,31 @@ header{
         transform: translate(-50%, -50%);
 
         .close-button{
-            width : 30%;
-            max-width : 30px;
+            z-index : 9999;
+            width : 50%;
+            max-width : 50px;
             position : absolute;
             top : 3%;
             right : 3%;
             cursor : pointer;
         }
 
+        #phone-menu {
+            max-width: 80%;
+            height: auto;
+        }
+
         ul{
-            margin : 80px auto 30px auto;
+            .primary-title-menu-color {
+                font-family: $third-font;
+                color: $primary-color;
+                font-size: 2rem;
+            }
 
-            .primary-title-menu{
-                max-width : 300px;
-                margin : 15px auto;
-                min-height : 35px;
-                max-height : 50px;
-                display : flex;
-                justify-content: left;
-                align-items : center;
-
-                a{
-                    color : $fourth-color;
-                    text-align: left;
-                }
+            .primary-title-menu {
+                font-family: $third-font;
+                font-size: 1.4rem;
+                color : black;
             }
         }
 
